Bug 113733: nsXPIDLCString doesn't have an assignment operator.

adds |operator=( const self_type& )| to nsSharable{C}String and nsXPIDL{C}String, to prevent the compiler from synthesizing its own (which won't do the right thing).

This should fix a bunch of XPIDLString-related cfront compile warnings.

original patch by jag, updated by me; r=dbaron, sr=jag.